--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
     </div>
       <h1 class="text-center font-bold mt-10 text-3xl">ABOUT ME</h1>
         <img src="images/red.png"  alt="yellow" class="mt-2">
+      <div id="about">
+        <h1 class="font-bold mt-4 text-2xl">EDUCATION</h1>
+        <div class="grid grid-cols-2 bg-[#ED553B] rounded-3xl mt-4 p-2 py-5">
+          <h1 class="text-center text-lg font-semibold"> <span class="font-bold"> AAS </span><br> SCIENCE</h1>
+          <p class="text-center text-lg">UVU <br> <span class="font-semibold"> FALL 2023 </span></p>
+        </div>
+
+        <div class="grid grid-cols-2 bg-[#ED553B] rounded-3xl mt-4 p-2 py-5">
+          <h1 class="text-center text-lg font-semibold"> <span class="font-bold"> AAS </span><br> WEB DESIGN</h1>
+          <p class="text-center text-lg">UVU <br> <span class="font-semibold"> SPRING 2024 </span></p>
+        </div>
+
+        <div class="grid grid-cols-2 bg-[#ED553B] rounded-3xl mt-4 p-2 py-5">
+          <h1 class="text-center text-lg font-semibold"> <span class="font-bold"> BACHELOR </span><br> WEB DESIGN AND DEVELOPMENT</h1>
+          <p class="text-center text-lg">UVU <br> <span class="font-semibold"> SPRING 2025 </span></p>
+        </div>
+      </div>
+
+
+
+      <div class="bg-[#EDBD42] w-5/6 rounded-3xl mt-4 p-2">
+        <h1 class="text-center text-xl font-bold text-white">Project 2</h1>
+        <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
 </main>
 
 </body>
