--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="grid grid-cols-2 bg-[#ED553B] rounded-3xl mt-4 p-2 py-5">
-          <h1 class="text-center text-lg font-semibold"> <span class="font-bold"> BACHELOR </span><br> WEB DESIGN AND DEVELOPMENT</h1>
+          <h1 class="text-center text-base font-semibold"> <span class="font-bold"> BACHELOR </span><br> WEB DESIGN AND DEVELOPMENT</h1>
           <p class="text-center text-lg">UVU <br> <span class="font-semibold"> SPRING 2025 </span></p>
         </div>
       </div>
