--- a/index.html
+++ b/index.html
@@ -66,8 +66,18 @@
           <h1 class="text-center text-base font-semibold"> <span class="font-bold"> BACHELOR </span><br> WEB DESIGN AND DEVELOPMENT</h1>
           <p class="text-center text-lg">UVU <br> <span class="font-semibold"> SPRING 2025 </span></p>
         </div>
+
+        <h1 class="font-bold mt-4 text-2xl">EXPERIENCE</h1>
+        <img src="images/exper.png" alt="experience" class="mt-2">
       </div>
 
+      <h1 class="text-center font-bold mt-10 text-3xl">CONTACT</h1>
+      <img src="images/blue.png"  alt="blue" class="mt-2">
+      <h2 class="font-bold text-xl mt-4 text-center">I WOULD LOVE TO CONNECT</h2>
+
+      <h2 class="font-bold text-xl mt-4 text-center">EMAIL</h2>
+      <h2 class="font-bold text-lg text-center underline decoration-[#497BA3]">ADDILEWIS21@GMAIL.COM</h2>
+      <h2 class="font-bold text-xl mt-4 text-center bg-[#497BA3] w-1/2 m-auto p-2 text-white rounded-lg">LINKEDIN</h2>
 
 
       <div class="bg-[#EDBD42] w-5/6 rounded-3xl mt-4 p-2">
